# CompArch

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  api_service.py  chat.py  config.py  embeddings.py  hybrid_search_graph_history.py  main.py  pyproject.toml  requirements.txt  requirements_auth.txt  reset_weaviate.py  start.sh  streamlit_app.py  styles.py  vectorstore.py  websocket_client.py
.claude/: settings.json
api/: lifespan.py  routes.py
docker/: entrypoint.sh
graph/: builder.py  nodes.py  state.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: conftest.py  test_api.py  test_embeddings.py  test_graph_nodes.py
ui/: chat.py  sidebar.py  styles.py
