[project]
name = "comparch-repo-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "langchain-community>=0.0.29",
    "langchain-openai>=0.0.8",
    "langchain-text-splitters>=0.0.1",
    "langchain-weaviate>=0.0.8",
    "langgraph>=0.0.19",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=1.35.7",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.33.0",
    "uvicorn[standard]>=0.34.0",
    "weaviate-client>=3.26.0",
    "websockets>=13,<15",
]
